Fixing layout issues.

--- a/app/scss/components/_button--touch.scss
+++ b/app/scss/components/_button--touch.scss
@@ -10,7 +10,6 @@
 }
 
 .button--touch {
-  display: flex;
   width: 100%;
   height: 100%;
   padding: 0;
@@ -19,19 +18,20 @@
   cursor: pointer;
   background-color: transparent;
   background-image: url('../images/background.svg');
-  background-position: right 90px;
+  background-position: center;
   background-repeat: no-repeat;
   border: 0;
   animation-delay: .3s;
-  flex-wrap: wrap;
 }
 
 .button--touch__heading,
 .button--touch__instructions {
   z-index: -1;
+  margin-left: 32px;
 }
 
 .button--touch__heading {
+  margin-bottom: 48px;
   font-size: rem(100px);
   line-height: rem(140px);
   animation-delay: .6s;
@@ -39,6 +39,7 @@
 
 .button--touch__instructions {
   @include font-size('16');
+  display: block;
   letter-spacing: .1px;
   animation-delay: .9s;
 }
